--- a/templates/event/new_event.html
+++ b/templates/event/new_event.html
@@ -2,6 +2,8 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 
+{% block title %}{% trans "Accueil" %}{% endblock %}
+
 {% block header %}
 <h1>Simplan.</h1>
 <p>{% trans "Planifier vos évènements, simplement" %}</p>
