--- a/templates/base.html
+++ b/templates/base.html
@@ -121,8 +121,18 @@
 
     {# Foundation #}
     <script>
-        $('.datepicker').fdatetimepicker();
-        $(document).foundation();
+            $('.datepicker').fdatetimepicker();
+            $(document).foundation();
+        </script>
+        <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-48658252-1', 'simplann.com');
+      ga('send', 'pageview');
+    
     </script>
     {% block additionnal-js %}{% endblock %}
 </body>
