--- a/templates/event/view_event.html
+++ b/templates/event/view_event.html
@@ -86,7 +86,7 @@
 						{% if not user.is_authenticated %}
 							<a href="#" data-dropdown="dropchoicer-{{choicer|slugify}}">{{choicer}}</a>
 							<ul id="dropchoicer-{{choicer|slugify}}" data-dropdown-content class="f-dropdown">
-		                      <li><a href="{% url "Simplan.event.views.view_event" event.slug_public %}?username={{choicer}}">{% trans "Modifier" %}</a></li>
+		                      <li><a href="{% url "Simplan.event.views.view_event" event.slug_public|slice:"0:8" event.slug_public|slice:"9:13" event.slug_public|slice:"14:18" event.slug_public|slice:"19:23" event.slug_public|slice:"24:36"%}?username={{choicer}}">{% trans "Modifier" %}</a></li>
 		                      <li><a href="{% url "Simplan.event.views.del_makechoices" event.slug %}?username={{choicer}}">{% trans "Supprimer" %}</a></li>
 		                    </ul>
 		                {% else %}    
